[tool.poetry]
name = "manipulator-health-monitoring-eda"
version = "0.1.0"
description = "Early-stage Exploratory Data Analysis (EDA) for the Manipulator Health Monitoring project."
authors = ["LaMinMaung193 <iamlaminmaung193@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
pandas = "^2.3.3"
scipy = "^1.16.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
plotly = "^6.4.0"
scikit-learn = "^1.7.2"
statsmodels = "^0.14.5"
tqdm = "^4.67.1"
python-dotenv = "^1.2.1"
pyyaml = "^6.0.3"
jupyter = "^1.1.1"
ipykernel = "^7.1.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
